NaN issue resolved - text still overflows and i cannot limit input length

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 /* colors */
 :root {
   --clrBackground: rgb(235, 235, 235);
+  --darkGrey: rgb(221, 221, 221);
   --clrMain: rgb(21, 105, 184);
   --width: 200px;
+  font-size: 62.5%;
 }
 
 * {
@@ -11,20 +13,65 @@
   box-sizing: border-box;
 }
 
-input[type="number"] {
-  grid-area: input;
+.inputNumber,
+.results {
+  position: relative;
+  width: 200px;
+  background-color: var(--darkGrey);
+  margin: 0 1rem;
+  border: none;
+  min-width: 200px;
+  padding: 0 1rem;
+  font-weight: bold;
+  overflow: hidden;
+  font-size: 1.6rem;
 }
 
+.inputNumber {
+  font-size: 2rem;
+  padding: auto;
+}
+input[type="number"] {
+  background-color: var(--darkGrey);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border: none;
+  outline: none;
+  padding-left: 1rem;
+  font-weight: bold;
+  overflow: hidden;
+  font-size: 1.6rem;
+}
+
+.select {
+  width: 200px;
+  border: none;
+  background-color: var(--darkGrey);
+  height: 100%;
+  padding: 0 1rem;
+  font-weight: bold;
+}
+
+body {
+  display: grid;
+  place-items: center;
+}
 .container {
   position: absolute;
-  top: 50%;
+  top: 40vh;
   left: 50%;
   transform: translateX(-50%);
+
+  width: 40vw;
   display: flex;
   justify-content: space-between;
 }
 
 .title {
   position: absolute;
-  top: 10px;
+  color: var(--clrMain);
+  top: 10vh;
+  right: 50%;
+  transform: translateX(50%);
 }
